# hcryptopals

./: README.md  hcryptopals.cabal  stack.yaml
app/: Main.hs
benchmark/: Main.hs
src/: Lib.hs
src/Crypto/Pals/: BitStream.hs  Encoding.hs  Xor.hs
test/: Spec.hs
