name:                hcryptopals
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/remusao/hcryptopals#readme
license:             BSD3
license-file:        LICENSE
author:              Rémi
maintainer:          remi@cliqz.com
copyright:           GPLv3
category:            TODO
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  other-modules:       Crypto.Pals.Encoding
                     , Crypto.Pals.BitStream
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , vector
  ghc-options:         -Wall -O2
  default-language:    Haskell2010

executable hcryptopals-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hcryptopals
  default-language:    Haskell2010

test-suite hcryptopals-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hcryptopals
                     , hedgehog
                     , bytestring
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

benchmark hcryptopals-benchmarks
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  hs-source-dirs:      benchmark
  ghc-options:         -Wall -O2 -rtsopts -threaded -with-rtsopts=-N
  build-depends:       base
                     , hcryptopals
                     , bytestring
                     , criterion
  default-language:   Haskell2010


source-repository head
  type:     git
  location: https://github.com/remusao/hcryptopals
